--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -30,3 +30,29 @@ jobs:
         with:
           name: examples-${{ matrix.configuration }}-${{ matrix.platform }}
           path: './reshade/bin/${{ matrix.platform }}/${{ matrix.configuration }} Examples/*.addon*'
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Download build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          merge-multiple: true
+
+      - name: Create tag name
+        id: tag_name
+        run: echo "name=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
+
+      - name: Create tag
+        id: tag_version
+        uses: mathieudutour/github-tag-action@v6.1
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          custom_tag: ${{ steps.tag_name.outputs.name }}
+
+      - name: Create release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: ${{ steps.tag_version.outputs.new_tag }}
+          files: '*.addon*'
